Updated to add payment terms

--- a/faq.html
+++ b/faq.html
@@ -104,6 +104,7 @@ He is a throwback from a previous product we had built that somehow managed to h
       <a href="faq.html">FAQ</a>
       <a href="privacy.html">Privacy Policy</a>
       <a href="terms.html">Terms of Service</a>
+      <a href="premium-terms">Mikey Premium Terms</a>
       <a href="mailto:support@mikeyteam.com">Contact</a>
     </div>
 
