--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
       <a href="faq.html">FAQ</a>
       <a href="privacy.html">Privacy Policy</a>
       <a href="terms.html">Terms of Service</a>
+      <a href="premium-terms">Mikey Premium Terms</a>
       <a href="mailto:support@mikeyteam.com">Contact</a>
     </div>
 
