Updated footer links + Terms to read 90 days

--- a/jobs.html
+++ b/jobs.html
@@ -129,7 +129,7 @@ Early employee equity, salary 70k - 110k depending on experience
       <a href="faq.html">FAQ</a>
       <a href="privacy.html">Privacy Policy</a>
       <a href="terms.html">Terms of Service</a>
-      <a href="premium-terms">Mikey Premium Terms</a>
+      <a href="premium-terms.html">Mikey Premium Terms</a>
       <a href="mailto:support@mikeyteam.com">Contact</a>
     </div>
 
