--- a/premium-terms.html
+++ b/premium-terms.html
@@ -57,7 +57,7 @@
 <h1 class="page-title">Premium Terms of Service</h1>
 
 
-<p>Mikey for Gmail (Mikey) offers you the option of increasing your account storage space beyond 30 days for a fee. By doing so, your account will be converted to a Premium Account and will not be subject to some of the restrictions placed on Free Accounts as described below.</p>
+<p>Mikey for Gmail (Mikey) offers you the option of increasing your account storage space beyond 90 days for a fee. By doing so, your account will be converted to a Premium Account and will not be subject to some of the restrictions placed on Free Accounts as described below.</p>
 
 <p>Mikey accepts credit cards and will automatically charge your credit card monthly or yearly, depending upon which Premium Account you select. If any fee is not paid in a timely manner, or Mikey is unable to process your transaction using the credit card information provided, Mikey reserves the right to revert your account back to a free version.</p> 
 
@@ -79,7 +79,7 @@
 
 <h2>Free Accounts</h2>
 
-<p>Mikey allows you an archive up to 30 days free of charge. Mikey reserves the right to terminate Free Accounts at any time, with or without notice. Without limiting the generality of the foregoing, if a Free Account is inactive for ninety (90) days, then it may be terminated.</p>
+<p>Mikey allows you an archive up to 90 days free of charge. Mikey reserves the right to terminate Free Accounts at any time, with or without notice. Without limiting the generality of the foregoing, if a Free Account is inactive for ninety (90) days, then it may be terminated.</p>
 
 <p>For further information regarding your Mikey Premium or Free Account, please see the Mikey Terms of Service.</p>
 
@@ -100,7 +100,7 @@
       <a href="faq.html">FAQ</a>
       <a href="privacy.html">Privacy Policy</a>
       <a href="terms.html">Terms of Service</a>
-      <a href="premium-terms">Mikey Premium Terms</a>
+      <a href="premium-terms.html">Mikey Premium Terms</a>
       <a href="mailto:support@mikeyteam.com">Contact</a>
     </div>
 
