--- a/privacy.html
+++ b/privacy.html
@@ -140,7 +140,7 @@ Palo Alto, CA 94306<br>
       <a href="faq.html">FAQ</a>
       <a href="privacy.html">Privacy Policy</a>
       <a href="terms.html">Terms of Service</a>
-      <a href="premium-terms">Mikey Premium Terms</a>
+      <a href="premium-terms.html">Mikey Premium Terms</a>
       <a href="mailto:support@mikeyteam.com">Contact</a>
     </div>
 
