--- a/terms.html
+++ b/terms.html
@@ -154,6 +154,7 @@ Mikey allows you to connect your email account so we can index and sort your stu
       <a href="faq.html">FAQ</a>
       <a href="privacy.html">Privacy Policy</a>
       <a href="terms.html">Terms of Service</a>
+      <a href="premium-terms.html">Mikey Premium Terms</a>
       <a href="mailto:support@mikeyteam.com">Contact</a>
     </div>
 
