added all mail stuff to faq

--- a/faq.html
+++ b/faq.html
@@ -80,6 +80,19 @@ You can uninstall Mikey completely with these steps: <a href="https://support.go
 <p><strong>Can you please delete all data related to my account?</strong><br>
 No problem.  Please email <a href="mailto:support@mikeyteam.com">support@mikeyteam.com</a> from the account you’d like to delete, and include the subject line “delete my data”.</p>
 
+<p><strong>I got an email asking to open up IMAP access to my "All Mail" folder, what does that mean?</strong><br>
+Currently, Mikey uses the "All Mail" folder to process your account and we'll need you to allow access via IMAP. This makes it easy to ensure that all your files, links, and images are properly extracted no matter what your labeling scheme is.<br><br>
+
+Enabling access is three easy steps:
+
+<ol>
+<li> Click the gear icon on the top right corner of your gmail. </li>
+<li> Click the "Labels" heading. </li>
+<li> Under "System Labels" find the row for "All Mail" and click the check box "Show in IMAP" </li>
+</ol>
+
+If you're having any trouble, feel free to email us at: <a href="mailto:support@mikeyteam.com">support@mikeyteam.com</a></p>
+
 <p><strong>What if I have more questions?</strong><br>
 Feel free to reach out to us at <a href="mailto:support@mikeyteam.com">support@mikeyteam.com</a>!</p>
 
