--- a/privacy.html
+++ b/privacy.html
@@ -118,9 +118,8 @@ Sometimes, links to other websites or services will appear in Mikey, like in ema
 <p>We may modify or update this Privacy Policy from time to time to reflect the changes in our business and practices, and so you should review this page periodically. When we change the policy in a material manner, we will update the ‘last modified’ date at the bottom of this page, post a notice to the Mikey website or mobile app, or reach out to you via email. By continuing to use Mikey, you agree to be bound by the most recent version of the Privacy Policy. The most up-to-date version can always be found at meetmikey.com/privacy.html.</p>
 
 <p>Sidekick Labs, Inc.<br> 
-495 Page Mill Road<br>
-Suite 180<br> 
-Palo Alto, CA 94306<br>
+455 Valencia St<br>
+San Francisco, CA 94103<br>
 </p>
 
 
