added faq for not indexing all files

--- a/faq.html
+++ b/faq.html
@@ -93,6 +93,9 @@ Enabling access is three easy steps:
 
 If you're having any trouble, feel free to email us at: <a href="mailto:support@mikeyteam.com">support@mikeyteam.com</a></p>
 
+<p><strong>How does your search index work?</strong><br>
+We follow links that we think you'll want and retrieve the content behind them, allowing you to search it.  For attachments, we put the entire contents of the file into the search index, allowing you to retrieve it by any keywords from the file (or the email that it was attached to).  In some rare cases (less than 1% of the time), we are unable to add very large files to our search index, but we still index the content from the email.
+
 <p><strong>What if I have more questions?</strong><br>
 Feel free to reach out to us at <a href="mailto:support@mikeyteam.com">support@mikeyteam.com</a>!</p>
 
