--- a/faq.html
+++ b/faq.html
@@ -122,6 +122,10 @@
     <p><strong>How does your search index work?</strong><br>
     We follow links that we think you'll want and retrieve the content behind them, allowing you to search it.  For attachments, we put the entire contents of the file into the search index, allowing you to retrieve it by any keywords from the file (or the email that it was attached to).  In some rare cases (less than 1% of the time), we are unable to add very large files to our search index, but we still index the content from the email.
 
+    <p><strong>I upgraded to premium, but I still don't have all my days. What's up?</strong><br>
+    How long it takes to process an account is dependent on the size of the account. Unfortunately, Gmail only lets Mikey process a couple of gigabytes per day so it may take a few days depending on the size of your account. If it has been a day and nothing has changed, refresh your browser window, if still nothing has changed, shoot us a note at <a href="mailto:support@mikeyteam.com">support@mikeyteam.com</a> and we will get on it right away.
+  
+
     <p><strong>What if I have more questions?</strong><br>
     Feel free to reach out to us at <a href="mailto:support@mikeyteam.com">support@mikeyteam.com</a>!</p>
 
