--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
 <link href="css/mikey.css" rel="stylesheet">
-<link rel="chrome-webstore-item" href="https://chrome.google.com/webstore/detail/pfbeimpckikjpnjhcbpikdjnelnblhnn">
 
 
 <link href='https://fonts.googleapis.com/css?family=Rokkitt:400,700|Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
@@ -62,12 +61,7 @@
         </div>
       
       <div class="span3 hidden-phone hidden-tablet">
-        <div class="download-button hidden-phone hidden-tablet" id="install-button" onclick="chrome.webstore.install('https://chrome.google.com/webstore/detail/pfbeimpckikjpnjhcbpikdjnelnblhnn', chromeSuccess, chromeFail)">Get Mikey for Gmail</div>
-
-        <a href="https://www.google.com/intl/en/chrome/browser/" id='wrong-browser' class="download-button" style='display:none;'>Get Chrome
-        </a>
-        <script type="text/javascript">
-        </script>
+        <p class="header-tagline">Unfortunately, Mikey is no longer available.</p>
       </div class="span2">
   </div>
     
